fixes to our update endpoints
